# movies-rust

./: Cargo.toml  README.md
mydatabase.db/: 000054.sst  000057.sst  000062.sst  000077.sst  000080.sst  000085.sst  000090.sst  IDENTITY  LOG  LOG.old.1697569798566326  LOG.old.1697570241426595  LOG.old.1697570254532645  LOG.old.1697571780462464  LOG.old.1697657939658317  LOG.old.1697658231343513  LOG.old.1697660578625547  LOG.old.1697697333388162  LOG.old.1697697772578960  LOG.old.1697741190629430  LOG.old.1698075829285549  LOG.old.1698075928098948  LOG.old.1698075929492070  LOG.old.1698075930426733  LOG.old.1698075931325844  MANIFEST-000064  MANIFEST-000092
src/: main.rs  routes.rs  sdbrepo.rs
src/models/: movie.rs  review.rs
src/routes/: movie_routes.rs  review_routes.rs
src/sdbrepo/: sdbrepo.rs
