[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = "1.0.0"
tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
warp = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v4"] }